--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,8 +13,12 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "ajv": "^8.17.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^7.4.0",
+    "react-scripts": "^5.0.1",
+    "web-vitals": "^4.2.4"
   },
   "browserslist": {
     "production": [
@@ -31,6 +35,6 @@
   "devDependencies": {
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.3",
-    "tailwindcss": "^4.0.15"
+    "tailwindcss": "^3.4.1"
   }
 }
