I added in test api calls from the frontend to backend.

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,10 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@tailwindcss/postcss": "^4.1.4",
     "ajv": "^8.17.1",
+    "install": "^0.13.0",
+    "npm": "^11.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^7.4.0",
@@ -35,6 +38,6 @@
   "devDependencies": {
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.3",
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^3.4.17"
   }
 }
