--- a/backend/package.json
+++ b/backend/package.json
@@ -8,16 +8,23 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "^13.5.0",
+    "cors": "^2.8.5",
+    "express": "^5.1.0",
+    "pg": "^8.14.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "node index.js",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+  "start": "node backend/server.js",
+  "start:frontend": "cd frontend && react-scripts start",
+  "start:backend": "cd backend && node server.js",
+  "dev": "concurrently \"npm run start:backend\" \"npm run start:frontend\"",
+  "build": "react-scripts build",
+  "test": "react-scripts test",
+  "eject": "react-scripts eject",
+  "db:migrate": "cd backend && node database/migrate.js"
   },
   "eslintConfig": {
     "extends": [
